Fix OPEN API for Classifier initialization
